# bsu

./: .gitignore  .gitmodules  README.md
algorithms/: readme.md
algorithms/dp-task51/: input.txt  main.cpp
algorithms/ds-task27.2/: output.txt  program.py
algorithms/ds-task5.2/: ds-task5.2.sln
algorithms/ds-task55/: BinaryHeap.py  input.txt
algorithms/ds-task56/: program.py
algorithms/gr-task30/: input.txt  program.py
algorithms/gr-task32/: gr-task32.sln
algorithms/gr-task64/: source.py
algorithms/gr-task65/: output.txt  source.py
algorithms/gr-task66.1/: CMakeLists.txt  main.cpp  output.txt
algorithms/gr-task66.2/: CMakeLists.txt  main.cpp
algorithms/gr-task67.1/: gr-task67.1.sln
algorithms/gr-task67.2/: CMakeLists.txt  main.cpp
algorithms/gr-task72/: CMakeLists.txt  main.cpp
computer-architecture/: readme.md
computer-architecture/mpi-lab1/: MPI_lab_1.sln  MPI_x64.props
computer-architecture/opencl-lab2/: opencl-lab2.sln  task.docx
computer-architecture/openmp-lab3/: CMakeLists.txt  count_integral_task2.cpp  find_max_min_task1.cpp
computer-architecture/openmp-lab3/performance-test/: performance.py
computer-architecture/openmp-lab3/time-results/: time_results.txt
cryptography/ciphers-lab2/: encrypted.txt  encrypted_affine_cipher.txt  encrypted_hill_cipher.txt  encrypted_shift_cipher.txt  main.py
cryptography/primes-lab1/: main.py  primes.py
math-modelling/brv-lab1/: brv-lab1.sln
math-modelling/crv-lab3/: main.py
math-modelling/drv-lab2/: drv.py  main.py
system-programming/: readme.md
testing/: readme.md
(+210 files in other folders)
